Fix some ladyboys
